Fix blurring of flagged posts on map and in chat rooms

--- a/apps/web/src/components/PostCard/PostCard.module.scss
+++ b/apps/web/src/components/PostCard/PostCard.module.scss
@@ -136,12 +136,3 @@
     border-top: 5px solid $color-requests;
   }
 }
-
-.flagged {
-
-  img {
-    filter: blur(30px);
-  }
-
-  overflow: hidden;
-}
